libraries/ckit/regression/valid-programs/a114.c
int i = 5;

static int j;

main () {
  return i-5;
}
